# cargo-5730

./: CHANGELOG  Cargo.toml  LICENSE  README.org
example/: README.org
example/bin-crate/: .gitignore  Cargo.toml  build.rs
example/bin-crate/build-script/: Cargo.toml
example/bin-crate/build-script/src/: main.rs
example/bin-crate/src/: main.rs
example/lib-crate/: Cargo.toml
example/lib-crate/src/: lib.rs
src/: lib.rs
