[package]
name = "cargo-5730"
version = "0.1.1"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
license-file = "LICENSE"
description = "A workaround for cargo#5730"
homepage = "https://github.com/auxoncorp/cargo-5730"
repository = "https://github.com/auxoncorp/cargo-5730"
documentation = "https://github.com/auxoncorp/cargo-5730/blob/master/README.org"

[dependencies]
